<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/mutfakDukkan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restoran_sipari_uygulamas"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/yemek1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/yemek_1_mercimek_orbas"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/yemekAdedi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/adet"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/yemek2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/yemek_2_lahmacun"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/yemekAdedi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/adett"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/yemek3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/yemek_3_k_s_r"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/yemekAdedi3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/adeti"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/siparisVerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siparisi_ver"
        android:layout_marginTop="24dp"/>
</LinearLayout>
